[package]
name = "near-sdk-abi-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/near/near-sdk-abi"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.5"
near-sdk-abi = { path = "../near-sdk-abi" }
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
