[package]
name = "near-sdk-abi-macros"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/near/near-sdk-abi"
description = """
Utility library for making typesafe cross-contract calls in NEAR SDK smart contracts.
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"

near-sdk-abi-impl = { path = "../near-sdk-abi-impl", version = "0.1" }