[package]
name = "near-sdk-abi"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/near/near-sdk-abi"

[dependencies]
anyhow = "1.0"
convert_case = "0.5"
near-abi = "0.3.0"
prettyplease = "0.1"
proc-macro2 = "1.0"
schemafy_lib = { git = "https://github.com/near/schemafy", rev = "4fc8de1ef94f66db1f45889feebb9cf6b931dd94" }
schemars = "0.8"
serde_json = "1.0"
syn = "1.0"
quote = "1.0"
