[package]
name = "near-sdk-abi"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/near/near-sdk-abi"

[dependencies]
anyhow = "1.0"
convert_case = "0.5"
prettyplease = "0.1"
syn = "1.0"
quote = "1.0"

near-abi = "0.3.0"
near-sdk-abi-impl = { path = "../near-sdk-abi-impl", version = "0.1" }
near-sdk-abi-macros = { path = "../near-sdk-abi-macros", version = "0.1" }