[package]
name = "delegator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "4.1.0-pre.1", features = ["abi"] }
near-sdk-abi = { path = "../../near-sdk-abi" }
serde = "1.0"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.14", features = ["full"] }
workspaces = "0.4.1"

[build-dependencies]
anyhow = "1.0"
near-sdk-abi = { path = "../../near-sdk-abi" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
